Fix too big margin on the mobile devices

--- a/src/styles/blocks/_post.scss
+++ b/src/styles/blocks/_post.scss
@@ -29,6 +29,10 @@
   &__image {
     @extend %container;
     @extend %text;
+
+    &::after {
+      display: none;
+    }
   }
 
   &__text {
